add separator element to ActionMenu, fixes #3013
Closes #3013

Merge request studip/studip!2017

--- a/resources/assets/stylesheets/scss/actionmenu.scss
+++ b/resources/assets/stylesheets/scss/actionmenu.scss
@@ -141,6 +141,12 @@ $action-menu-shadow: 1px 1px 1px $dark-gray-color-60;
                 color: $active-color;
             }
         }
+
+        > hr {
+            border-style: none;
+            border-top: thin solid var(--dark-gray-color-45);
+            margin: 4px 0;
+        }
     }
 
     &.is-open {
